testfx/errors/error_tests/err_03_if_missing_cond.fx
// 测试3: if语句错误 - 缺少条件表达式
if  {
    println("test")
}
